Added notifications feature; still work in progress

--- a/socialMediaSite/client/public/index.html
+++ b/socialMediaSite/client/public/index.html
@@ -52,7 +52,9 @@ no
                 </div>
                 <div class = nav-bar-item>
                     <i class="fa-solid fa-bell"></i>
-                    <li class = "nav-bar-link">Notifications</li>
+                    <li class="nav-bar-link">
+                        <a href="notifications.html">Notifications</a>
+                    </li>
                 </div>
                 <div class = nav-bar-item>
                     <!-- <a href="settings.html">Settings</a> -->
@@ -151,8 +153,8 @@ no
 
 
 
-
     <script src="js/follows.js"></script>
+    <!-- <script src="notifications.js"></script> -->
     <script src="js/posts.js"></script>
     <script src="js/account.js"></script>
     <script src="js/awsFunctions.js"></script>
